[REFACTOR] Removed unused imports